refactor: Refatoração da estrutura do backend