@@ -4,64 +4,68 @@ import br.com.ifpb.adotaifpb.dtos.AnimalRequestDTO;
 import br.com.ifpb.adotaifpb.dtos.AnimalResponseDTO;
 import br.com.ifpb.adotaifpb.entities.Abrigo;
 import br.com.ifpb.adotaifpb.entities.Animal;
-import br.com.ifpb.adotaifpb.entities.Especie;
+import br.com.ifpb.adotaifpb.entities.FotoAnimal;
 import br.com.ifpb.adotaifpb.repository.AbrigoRepository;
 import br.com.ifpb.adotaifpb.repository.AnimalRepository;
-import br.com.ifpb.adotaifpb.repository.EspecieRepository;
-import br.com.ifpb.adotaifpb.utils.StatusEnum;
-import jakarta.transaction.Transactional;
-import org.springframework.beans.BeanUtils;
+import br.com.ifpb.adotaifpb.utils.StatusAnimalEnum;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class AnimalService {
 
     private final AnimalRepository animalRepository;
-    private final EspecieRepository especieRepository;
     private final AbrigoRepository abrigoRepository;
 
-    public AnimalService(AnimalRepository animalRepository, EspecieRepository especieRepository, AbrigoRepository abrigoRepository) {
+    public AnimalService(AnimalRepository animalRepository, AbrigoRepository abrigoRepository) {
         this.animalRepository = animalRepository;
-        this.especieRepository = especieRepository;
         this.abrigoRepository = abrigoRepository;
     }
 
-
     @Transactional
     public AnimalResponseDTO cadastrarAnimal(AnimalRequestDTO dto) {
-        // Valida e busca as entidades
-        Especie especie = especieRepository.findById(dto.especieId())
-                .orElseThrow(() -> new IllegalArgumentException("Espécie não encontrada."));
-
         Abrigo abrigo = abrigoRepository.findById(dto.abrigoId())
                 .orElseThrow(() -> new IllegalArgumentException("Abrigo não encontrado."));
 
         Animal animal = new Animal();
-        animal.setNome(dto.nome());
-        animal.setEspecie(especie);
-        animal.setAbrigo(abrigo);
-        animal.setRaca(dto.raca());
-        animal.setIdadeEstimada(dto.idadeEstimada());
-        animal.setSexo(dto.sexo());
-        animal.setDescricao(dto.descricao());
-        animal.setUrlFoto(dto.urlFoto());
-        animal.setStatus(StatusEnum.DISPONIVEL);
+        converterAnimalDTO(dto, animal, abrigo);
+        animal.setStatus(StatusAnimalEnum.DISPONIVEL);
+
+
+        if (dto.fotosUrls() != null && !dto.fotosUrls().isEmpty()) {
+            animal.setUrlFoto(dto.fotosUrls().get(0));
+
+            coverterFotoDTO(dto, animal);
+        }
 
         animal = animalRepository.save(animal);
         return new AnimalResponseDTO(animal);
     }
 
+    private void coverterFotoDTO(AnimalRequestDTO dto, Animal animal) {
+        boolean isPrincipal = true;
+        for (String url : dto.fotosUrls()) {
+            FotoAnimal foto = new FotoAnimal();
+            foto.setUrl(url);
+            foto.setPrincipal(isPrincipal);
+            animal.adicionarFoto(foto);
+            isPrincipal = false;
+        }
+    }
+
     public List<AnimalResponseDTO> listarAnimaisDisponiveis() {
-        return animalRepository.findByAtivoTrueAndStatus(StatusEnum.DISPONIVEL).stream()
+        return animalRepository.findByAtivoTrue().stream()
                 .map(AnimalResponseDTO::new)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public AnimalResponseDTO buscarPorId(Long id) {
-        return new AnimalResponseDTO(animalRepository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("Animal não encontrado com o ID: " + id)));
+        Animal animal = animalRepository.findById(id)
+                .orElseThrow(() -> new IllegalArgumentException("Animal não encontrado com o ID: " + id));
+        return new AnimalResponseDTO(animal);
     }
 
     @Transactional
@@ -69,31 +73,40 @@ public class AnimalService {
         Animal animal = animalRepository.findById(id)
                 .orElseThrow(() -> new IllegalArgumentException("Animal não encontrado."));
 
-        Especie especie = especieRepository.findById(dto.especieId())
-                .orElseThrow(() -> new IllegalArgumentException("Espécie não encontrada."));
-
         Abrigo abrigo = abrigoRepository.findById(dto.abrigoId())
                 .orElseThrow(() -> new IllegalArgumentException("Abrigo não encontrado."));
 
-        animal.setNome(dto.nome());
-        animal.setEspecie(especie);
-        animal.setAbrigo(abrigo);
-        animal.setRaca(dto.raca());
-        animal.setIdadeEstimada(dto.idadeEstimada());
-        animal.setSexo(dto.sexo());
-        animal.setDescricao(dto.descricao());
-        animal.setUrlFoto(dto.urlFoto());
+        converterAnimalDTO(dto, animal, abrigo);
+
+
+        if (dto.fotosUrls() != null) {
+            animal.getFotos().clear();
+            animal.setUrlFoto(dto.fotosUrls().isEmpty() ? null : dto.fotosUrls().get(0));
+
+            coverterFotoDTO(dto, animal);
+        }
 
         animal = animalRepository.save(animal);
         return new AnimalResponseDTO(animal);
     }
 
+    private void converterAnimalDTO(AnimalRequestDTO dto, Animal animal, Abrigo abrigo) {
+        animal.setNome(dto.nome());
+        animal.setEspecie(dto.especie());
+        animal.setAbrigo(abrigo);
+        animal.setRaca(dto.raca());
+        animal.setNascimentoEstimado(dto.nascimentoEstimado());
+        animal.setSexoAnimal(dto.sexoAnimal());
+        animal.setDescricao(dto.descricao());
+        animal.setPeso(dto.peso());
+        animal.setCastrado(dto.castrado());
+    }
+
     @Transactional
     public void removerAnimal(Long id) {
-        Animal animal = animalRepository.findByIdAndAtivoTrue(id)
+        Animal animal = animalRepository.findById(id)
                 .orElseThrow(() -> new IllegalArgumentException("Animal não encontrado."));
 
-        animal.setAtivo(false);
-        animalRepository.save(animal);
+        animalRepository.delete(animal);
     }
 }
